--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,20 @@ h6 {
   font-size: inherit;
 }
 
+/* Chrome, Safari, Edge, Opera */
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .lock body {
   overflow: hidden;
   -ms-touch-action: none;
